Added tests and README